--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
   <head>
     <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
-    <script src="text/javascript" src="build/js/app.js"></script>
+    <script rel="text/javascript" src="build/js/app.js"></script>
     <title></title>
   </head>
   <body>
-
+    <h1>Alarm Clock</h1>
+    <h3>Current Time: <span id='currentTime'></span></h3>
+    <form id="alarm">
+      <label for="hour">Hour</label>
+      <select id="hour">
+      </select>
+      <label for="minute">Minute</label>
+      <select id="minute">
+      </select>
+      <label for="ampm">AM/PM</label>
+      <select id="ampm">
+        <option value="AM">AM</option>
+        <option value="PM">PM</option>
+      </select>
+      <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <div id="userDisplay">
+    </div>
   </body>
 </html>
