fix bug with 00s

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <div class="container">
       <h1>Alarm Clock</h1>
       <h3>Current Time: <span id='currentTime'></span></h3>
+      <h4>Set An Alarm:</h4>
       <form id="alarm">
-        <label for="hour">Hour</label>
         <select id="hour">
         </select>
-        <label for="minute">Minute</label>
         <select id="minute">
         </select>
-        <label for="ampm">AM/PM</label>
         <select id="ampm">
           <option value="AM">AM</option>
           <option value="PM">PM</option>
